# platform.core.uifw.tts

./: AUTHORS  CMakeLists.txt  COPYING  NOTICE  changelog  org.tizen.voice.ttsnotiserver.service  org.tizen.voice.ttsserver.service  org.tizen.voice.ttssrserver.service  project.config  sysinfo-tts.xml  tts-config.xml  tts-server.conf  tts-server.manifest  tts-server.rule
client/: CMakeLists.txt  tts-setting.pc.in  tts.c  tts.h  tts.pc.in  tts_client.c  tts_client.h  tts_dbus.c  tts_dbus.h  tts_main.h  tts_setting.c  tts_setting.h  tts_setting_dbus.c  tts_setting_dbus.h
common/: tts_config_mgr.c  tts_config_mgr.h  tts_config_parser.c  tts_config_parser.h  tts_defs.h
debian/: changelog  control  copyright  docs  libtts-dev.install.in  libtts.install.in  rules
doc/: doxyfile  uix_tts_doc.h  uix_tts_engine_main_doc.h
include/: CMakeLists.txt  tts-engine.pc.in  tts.h  tts_setting.h  ttse.h
packaging/: tts.changes  tts.spec
server/: CMakeLists.txt  ttsd.conf  ttsd_config.c  ttsd_config.h  ttsd_config_noti.c  ttsd_config_sr.c  ttsd_data.cpp  ttsd_data.h  ttsd_dbus.c  ttsd_dbus.h  ttsd_dbus_server.c  ttsd_dbus_server.h  ttsd_engine_agent.c  ttsd_engine_agent.h  ttsd_main.c  ttsd_main.h  ttsd_main_noti.c  ttsd_main_sr.c  ttsd_network.c  ttsd_network.h  ttsd_player.c  ttsd_player.cpp  ttsd_player.h  ttsd_server.c  ttsd_server.cpp  ttsd_server.h  ttse.c  ttsp.h
test/: CMakeLists.txt  test_main.c
