CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(tts C)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "${PREFIX}")
SET(LIBDIR "${PREFIX}/lib")
SET(INCLUDEDIR "${PREFIX}/include")
SET(VERSION 0.1.1)

SET(SRCS 
	tts.c
	tts_client.c
	tts_dbus.c
)

SET(SETTING_SRCS
	tts_setting.c
	tts_setting_dbus.c
)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${INCLUDEDIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../common)

INCLUDE(FindPkgConfig)
pkg_check_modules(pkgs REQUIRED 
	glib-2.0 dbus-1 dlog ecore
)

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF ("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET_ARM")
	MESSAGE("[TARGET] Compile")
ELSE  ("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET_I386")
	MESSAGE("[i386] Compile")
ENDIF ("${ARCH}" STREQUAL "arm")

FOREACH(flag ${pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

## Add definitions ##
ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")

## TTS library ##
ADD_LIBRARY("${PROJECT_NAME}_static" STATIC ${SRCS})
ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${pkgs_LDFLAGS})

## TTS-setting library ##
ADD_LIBRARY("${PROJECT_NAME}_setting" SHARED ${SETTING_SRCS})
TARGET_LINK_LIBRARIES("${PROJECT_NAME}_setting" ${pkgs_LDFLAGS})

## configure pkgconfig files ##
CONFIGURE_FILE(tts.pc.in "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}.pc" @ONLY)
CONFIGURE_FILE(tts-setting.pc.in "${CMAKE_CURRENT_SOURCE_DIR}/${PROJECT_NAME}-setting.pc" @ONLY)

## Install library files ##
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION lib COMPONENT RuntimeLibraries)
INSTALL(TARGETS ${PROJECT_NAME}_setting DESTINATION lib COMPONENT RuntimeLibraries)
INSTALL(FILES "${PROJECT_NAME}.pc" "${PROJECT_NAME}-setting.pc" DESTINATION lib/pkgconfig)
INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/tts.h ${CMAKE_CURRENT_SOURCE_DIR}/tts_setting.h DESTINATION include)
